# Console

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Command.h  Console.cpp  Console.h  ConsoleEngine.h  README.md  Shape.cpp  Shape.h  TextVideo.cpp  TextVideo.h  TimedEvent.hpp  main.cpp
ConsoleAssist/: main2.cpp
application/: CMakeLists.txt  CMatrix.cpp  CacheVisualization.cpp  ConsoleVideo.cpp  ConwayGameOfLife.cpp  FileExplorer.cpp
application/docs/: ConsoleVideoHelp.txt
include/: BufferObject.hpp  Console.h  ConsoleEngine.h  Event.hpp  Shape.h  TextVideo.h
source/: Console.cpp  Shape.cpp  TextVideo.cpp
